first step done

--- a/shapes.html
+++ b/shapes.html
@@ -11,36 +11,37 @@
 			border-radius: 0.5rem;
 			text-align: center;
 			display: inline-block;
-			padding: 0.5rem 1rem;
-
 		}
 		</style>
 	</head>
 	<body>
 		<div class="content">
-			<input type="button" class="btnAdd" onclick="addShape()" value="Add Shape">
+			<input type="button" class="btnAdd" onclick="generateShape()" value="Add Shape">
 		</div>
 	</body>
 	<script>
 
-	function addShape()
-		{
-			generateShape();
-	}
 	function generateShape()
 	{
 		var element = document.createElement("div");
+		var minimumSize = 16;//1 rem minimum
 		element.className = "randShape";
-		element.style.height = Math.random() * 100;
-		element.style.width = Math.random() * 100;
+
+		//generate random size and position
+		element.style.height = Math.random() * 100 + minimumSize;
+		element.style.width = Math.random() * 100 + minimumSize;
 		element.style.margin = Math.random() * 10 + "%" + Math.random() * 100 + "%";
 
+		//random color
 		var randColor = parseInt(Math.random() * 255);
 		element.style.backgroundColor = 'rgb('+randColor+','+randColor+','+randColor+')';
 
+
+		//add text to the div
 		var text = document.createTextNode(":D");
 		element.appendChild(text);
-		
+
+		//place the div onto the DOM		
 		document.body.appendChild(element);
 	}
 
